updating uploader component to fix file list overflow issues; tweaking demo page css to make it all look nicer

--- a/demo/src/style.css
+++ b/demo/src/style.css
@@ -1,6 +1,3 @@
-* {
-  outline: 1px solid #f00 !important;
-}
 body {
   margin: 0;
   padding: 0;
